# credit-limit-bandit

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
data/: cohort_by_tier.csv  cohort_results.csv  dashboard_cohort_tab_code.txt  synthetic_users.csv
docs/: index.md
docs/algorithms/: comparison.md  epsilon-greedy.md  thompson-sampling.md  ucb.md
docs/architecture/: data-flow.md  design-decisions.md  overview.md
docs/components/: context-builder.md  evaluation.md  reward-engine.md  simulator.md
docs/concepts/: cold-start.md  delayed-feedback.md  exploration-exploitation.md  multi-armed-bandit.md  non-stationarity.md
docs/guides/: contributing.md  dashboard.md  getting-started.md  running-simulations.md
docs/results/: interpreting-results.md  metrics-explained.md
notebooks/: 01_simulation_eda.ipynb  02_bandit_training.ipynb  03_evaluation.ipynb  04_cohort_analysis.ipynb
src/: __init__.py  context.py  evaluate.py  reward.py  reward_constants.py  simulate_run.py  simulator.py
src/bandits/: __init__.py  base.py  epsilon_greedy.py  thompson.py  ucb.py
tests/: test_context.py  test_integration.py  test_reward.py
