[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-limit-bandit"
version = "0.1.0"
description = "Contextual bandit system for credit-limit optimization"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "plotly",
    "matplotlib",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
]
